--- a/Heart Analysis.ipynb
+++ b/Heart Analysis.ipynb
@@ -8,6 +8,7 @@
     "# Heart Attack Risk Analysis\n",
     "### Exploring Key Factors Affecting Mortality in Heart Failure Patients\n",
     "#### By Nicholas Hausler"
+    "#### Date: Sep 09, 2025
    ]
   },
   {
